--- a/studio.html
+++ b/studio.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <img src="http://www.google-analytics.com/collect?v=1
+&amp;t=pageview
+&amp;tid=UA-1234567-1
+&amp;cid=n-1234567
+&amp;dl=http%3A%2F%2Fblog.naver.com%2Fmindthelog%2F220622184298
+&amp;dh=blog.naver.com
+&amp;dt=%ED%8F%AC%EC%8A%A4%ED%8A%B8%EC%A0%9C%EB%AA%A9" 
+class="__se_object" s_type="attachment" s_subtype="image" jsonvalue="%7B%7D" />
     <!--A_21861046_김혜인-->
     <title></title>
     <style>
