--- a/hyein.html
+++ b/hyein.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-<img src="http://www.google-analytics.com/collect?v=1
-&amp;t=pageview
-&amp;tid=UA-1234567-1
-&amp;cid=n-1234567
-&amp;dl=http%3A%2F%2Fblog.naver.com%2Fmindthelog%2F220622184298
-&amp;dh=blog.naver.com
-&amp;dt=%ED%8F%AC%EC%8A%A4%ED%8A%B8%EC%A0%9C%EB%AA%A9" 
-class="__se_object" s_type="attachment" s_subtype="image" jsonvalue="%7B%7D" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P9VNFBQ');</script>
+<!-- End Google Tag Manager -->
     <!--A_21861046_김혜인-->
     <title></title>
     <style>
@@ -93,6 +92,10 @@ class="__se_object" s_type="attachment" s_subtype="image" jsonvalue="%7B%7D" />
     </style>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9VNFBQ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <center>
       <header>
         <class='c_m_3 c_3'>
